# satysfi-class-template

./: .gitignore  README.md  Satyristes  class-template.satyh  class.satyh  demo-ipsj.saty  demo.saty  demo_ipsj.saty  ipsj.satyh  satysfi-class-template-doc.opam  satysfi-class-template.opam
doc/: demo.saty  local.satyh  manual-class-template-ja.saty
src/: class-template.satyh  expand.satyh
