opam-version: "2.0"
name: "satysfi-class-template-doc"
version: "0.1.0"
synopsis: "Document of satysfi-class-template"
description: """
Document of satysfi-code-class-template.
satysfi-class-template: https://github.com/puripuri2100/satysfi-class-template
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/puripuri2100/satysfi-class-template"
dev-repo: "git+https://github.com/puripuri2100/satysfi-cclass-template.git"
bug-reports: "https://github.com/puripuri2100/satysfi-class-template/issues"
depends: [
  "satysfi" { >= "0.0.7-26-g9f4b68ec" & < "0.1.0" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-class-template" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base" { >= "1.4.0" & < "2.0.0"}
  "satysfi-code-printer" { >= "1.1.1" & < "2.0.0"}
  "satysfi-image" { >= "0.1.0" & < "1.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
    "--name" "class-template-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
    "--name" "class-template-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]