opam-version: "2.0"
name: "satysfi-class-template"
version: "0.1.0"
synopsis: "Flexible setting able SATySFi class filee"
description: """
Flexible setting able SATySFi class files.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/puripuri2100/satysfi-class-template"
dev-repo: "git+https://github.com/puripuri2100/satysfi-cclass-template.git"
bug-reports: "https://github.com/puripuri2100/satysfi-class-template/issues"
depends: [
  "satysfi" { >= "0.0.7-26-g9f4b68ec" & < "0.1.0" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base" { >= "1.4.0" & < "2.0.0"}
  "satysfi-num-conversion" { >= "0.1.4" & < "1.0.0"}
  "satysfi-json" { >= "1.1.3" & < "2.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
    "--name" "class-template"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
    "--name" "class-template"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]